--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -539,10 +539,6 @@ header{
     justify-content: center;
     align-items: center;
 		color:white;
-		background:$teal;
-	}
-	.entry-title:hover{
-		opacity: 0;
 	}
 	.entry-content{
 		display:flex;
@@ -554,16 +550,38 @@ header{
 		color:white;
 		display: none;
 		position: absolute;
-    top: -100%;
+    top: -60%;
 	}
+//top 65% mobile, 100% desktop
 
-// color scheme//	
-	.entry-title{
-		nth:child(1n+3){
-			background-color:red;
+
+// color scheme//
+.site-main{
+	.type-event:nth-child(3n+1){
+		.entry-title-wrapper{
+			.entry-title{
+			// background:#1DAFB8;
+			background-color: rgba(29, 175, 184, 0.75);
+			
+			}
+		}
+	}
+	.type-event:nth-child(3n+2){
+		.entry-title-wrapper{
+			.entry-title{
+				background-color: rgba(217, 31, 24, 0.75);
+			}
+		}
+	}
+	.type-event:nth-child(3n+3){
+		.entry-title-wrapper{
+			.entry-title{
+				background-color: rgba(255, 203, 51, 0.75);
+			}
 		}
 	}
 
+}	
 
 	@media screen  and (min-width:1024px){
 		.site-main{
@@ -577,6 +595,7 @@ header{
 		}
 		.entry-content{
 			font-size:1.5rem;
+			top:-100%;
 		}
 	}
 }
