--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1073,28 +1073,20 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-preferred-size: 90%;
+      flex-basis: 90%;
   color: white;
   padding-top: 1rem;
   padding-bottom: 1rem; }
 
 .term-weekly .entry-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-left: auto;
-  margin-right: auto;
-  width: 90%;
+  position: absolute;
+  top: -60%;
   color: white;
   display: none;
-  position: absolute;
-  top: -60%; }
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%; }
 
 .term-weekly .location {
   display: -webkit-box;
