--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1117,8 +1117,7 @@ header {
         flex-basis: 49%;
     height: 50vw; }
   .term-weekly .entry-content {
-    font-size: 1.5rem;
-    top: -100%; } }
+    font-size: 1.5rem; } }
 
 /*--------------------------------------------------------------
 # Media
