updated front page, archive news, and fixed scss for front page.

--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -25,9 +25,10 @@
 }
 
 //** Mission **//
-
-article {
-  background: url(../../images/mobile-front-bg.png);
-  background-size: cover;
-  height: 88vh;
+.home {
+  article {
+    background: url(../../images/mobile-front-bg.png);
+    background-size: cover;
+    height: 88vh;
+  }
 }
