--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -624,10 +624,11 @@ a {
   text-align: left; }
 
 .mobile-menu ul {
+  text-transform: uppercase;
   margin: 0;
   padding: 0; }
   .mobile-menu ul li:nth-child(odd) {
-    background: #18949a; }
+    background-color: #18949a; }
 
 .mobile-menu li {
   display: block;
@@ -1020,7 +1021,7 @@ header {
     width: 39% !important;
     position: absolute;
     left: 36%;
-    top: -61%; }
+    top: -48%; }
   .page-template-contact .social-info {
     height: 50%;
     width: auto;
@@ -1120,7 +1121,7 @@ object {
       right: 4%;
       left: auto; } }
 
-article {
+.home article {
   background: url(../../images/mobile-front-bg.png);
   background-size: cover;
   height: 88vh; }
