--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -12,27 +12,6 @@
 //   }
 // }
 
-<<<<<<< HEAD
-// @media screen and (min-width: 1024px) {
-//   .hero-container {
-//     height: 85vh;
-//     img {
-//       height: 25%;
-//       top: 4%;
-//       right: 4%;
-//       left: auto;
-//     }
-//   }
-// }
-
-// //** Mission **//
-
-// article {
-//   background: url(../../images/mobile-front-bg.png);
-//   background-size: cover;
-//   height: 88vh;
-// }
-=======
 //** Mission **//
 .home {
   article {
@@ -74,10 +53,15 @@
     }
     .front-page-news {
       display: flex;
+      flex-wrap: wrap;
+      h2 {
+        width: 100%;
+        text-align: center;
+      }
     }
+
   // home
   }
 // media queries
 }
 
->>>>>>> 3530f08ece7a6256ad936a0a4fc5262775b7f691
