--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1183,19 +1183,6 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
-<<<<<<< HEAD
-=======
-.hero-container {
-  background: url(../../images/csl-hero.png);
-  background-size: cover;
-  height: 40vh;
-  position: relative; }
-  .hero-container img {
-    position: absolute;
-    height: 55px;
-    bottom: 3vh;
-    left: 5vw; }
-
 .home article {
   background: url(../../images/mobile-front-bg.png);
   background-size: 20rem;
@@ -1224,5 +1211,9 @@ object {
   .home .front-page-news {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; } }
->>>>>>> 3530f08ece7a6256ad936a0a4fc5262775b7f691
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
+    .home .front-page-news h2 {
+      width: 100%;
+      text-align: center; } }
