--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -553,11 +553,13 @@ span.wpcf7-not-valid-tip { display: none; }
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
+			align-items:center;
 		}
 		.alt-title{
 			color:$alt-gray;
 			font-size:1rem;
 			font-weight:lighter;
+			padding-left:1rem;
 		}
 		.alt-title::before{
 			content:'[';
@@ -566,10 +568,14 @@ span.wpcf7-not-valid-tip { display: none; }
 			content:']';
 		}
 	}
-
+	.entry-title-wrapper:hover{
+		height:100%;
+		flex-basis:100%;
+	}
 	.entry-content{
 		position: absolute;
-		top: -60%;
+		top:0%;
+		left:5%;
 		color:white;
 		display: none;
 		margin-left: auto;
@@ -583,23 +589,17 @@ span.wpcf7-not-valid-tip { display: none; }
 .site-main{
 	.type-event:nth-child(3n+1){
 		.entry-title-wrapper{
-			.entry-title{
 			background-color: rgba(29, 175, 184, 0.75);
-			}
 		}
 	}
 	.type-event:nth-child(3n+2){
 		.entry-title-wrapper{
-			.entry-title{
 				background-color: rgba(217, 31, 24, 0.75);
-			}
 		}
 	}
 	.type-event:nth-child(3n+3){
 		.entry-title-wrapper{
-			.entry-title{
 				background-color: rgba(255, 203, 51, 0.75);
-			}
 		}
 	}
 }	
