--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -874,8 +874,6 @@ header {
 
 .page-template-contact .wpcf7-form {
   background: url("../../images/contact-form-background.png");
-  background-size: cover;
-  background-repeat: no-repeat;
   padding-top: 1rem;
   padding-bottom: 3rem;
   width: 100vw; }
@@ -1044,6 +1042,11 @@ span.wpcf7-not-valid-tip {
   .page-template-contact .address-province {
     margin-top: 2rem; } }
 
+.term-weekly .weekly-event-page-title {
+  padding-left: 0.5rem;
+  text-transform: uppercase;
+  color: #000000; }
+
 .term-weekly .site-main {
   margin-left: auto;
   margin-right: auto;
@@ -1137,6 +1140,22 @@ span.wpcf7-not-valid-tip {
   background-color: rgba(255, 203, 51, 0.75); }
 
 @media screen and (min-width: 1024px) {
+  .term-weekly .weekly-event-page-title {
+    padding-left: 2.5%;
+    color: #fff;
+    background: #000000;
+    width: 31%;
+    height: 5vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 2rem; }
   .term-weekly .site-main {
     display: -webkit-box;
     display: -ms-flexbox;
