--- a/themes/csl/sass/style.scss
+++ b/themes/csl/sass/style.scss
@@ -64,3 +64,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "media";
 @import "page-templates";
 @import "_front-page.scss";
+@import "seasonal-events";
