--- a/themes/csl/sass/_front-page.scss
+++ b/themes/csl/sass/_front-page.scss
@@ -2,29 +2,53 @@
 .hero-container {
   background: url(../../images/csl-hero.png);
   background-size: cover;
-  height: 40vh;
+  background-position: left;
+  height: 80vw;
   position: relative;
   img {
     position: absolute;
-    height: 55px;
-    bottom: 3vh;
+    height: 17vw;
+    bottom: 2vw;
     left: 5vw;
   }
 }
 
 //** Mission **//
 .home {
+  .mission-eagles {
+    padding: 2rem;
+  }
+  .eagle-left {
+    position: absolute;
+    left: 2%;
+    top: 4%;
+    width: 30%;
+  }
+  .eagle-right {
+    position: absolute;
+    right: 4%;
+    top: 20%;
+    width: 25%;
+  }
   article {
     background: url(../../images/nature-background.png);
     background-size: cover;
-    height: 500px;
     text-align: center;
     color: white;
+    font-family: $font__main;
+    background-position: bottom;
+    height: 95vh;
+    position: relative;
+    
     h2{
+      font-size: 8vw;
+      font-weight: bold;
       text-transform: uppercase;
-      margin-top: 3rem;
+      margin-top: 4rem;
+      margin-bottom: 0;
     }
     p {
+      font-size: 5vmin;
       text-align: left;
       padding-left: 2rem;
       padding-right: 2rem;
@@ -46,16 +70,20 @@
 
 @media screen and (min-width: 1024px) {
   .home {
+    h2 {
+      text-transform: uppercase;
+    }
     .desktop-bg {
       background: url(../../images/nature-background.png);
       background-size: cover;
     }
     .hero-container {
+      background-position: center;
       height: 85vh;
       img {
         height: 25%;
         top: 4%;
-        right: 4%;
+        right: 1%;
         left: auto;
       }
     }
@@ -66,10 +94,10 @@
       text-align: left;
       color: white;
       h2{
-        text-transform: uppercase;
         margin-top: 3rem;
         border: 1px solid black;
         background-color: black;
+        padding-left: 2rem;
       }
       p {
         text-align: left;
@@ -82,13 +110,17 @@
       display: flex;
       flex-wrap: wrap;
       h2 {
-        width: 100%;
-        text-align: center;
+
+        text-align: left;
+        border: 1px solid black;
+        background-color: black;
+        padding-left: 2rem;
+        font-size: 30px;
       }
       .front-page-news-gallery {
         display: flex;
-        justify-content: space-between;
-        width: 100%;
+        justify-content: space-around;
+        width: 90%;
       }
     }
     .front-page-button {
@@ -96,7 +128,8 @@
       justify-content: center;
       position: relative;
       .see-more {
-        font-family: 'lato';
+        font-family: $font__main;
+        font-weight: bold;
         position: absolute;
         top: 1.2rem;
         text-align: center;
