--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -234,7 +234,7 @@ input,
 select,
 textarea {
   color: #404040;
-  font-family: sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16px;
   font-size: 1rem;
   line-height: 1.5; }
@@ -1183,16 +1183,50 @@ object {
 # Page Templates
 --------------------------------------------------------------*/
 /* Front page */
+.hero-container {
+  background: url(../../images/csl-hero.png);
+  background-size: cover;
+  background-position: left;
+  height: 80vw;
+  position: relative; }
+  .hero-container img {
+    position: absolute;
+    height: 17vw;
+    bottom: 2vw;
+    left: 5vw; }
+
+.home .mission-eagles {
+  padding: 2rem; }
+
+.home .eagle-left {
+  position: absolute;
+  left: 2%;
+  top: 4%;
+  width: 30%; }
+
+.home .eagle-right {
+  position: absolute;
+  right: 4%;
+  top: 20%;
+  width: 25%; }
+
 .home article {
   background: url(../../images/nature-background.png);
   background-size: cover;
-  height: 500px;
   text-align: center;
-  color: white; }
+  color: white;
+  font-family: "Lato", sans-serif;
+  background-position: bottom;
+  height: 95vh;
+  position: relative; }
   .home article h2 {
+    font-size: 8vw;
+    font-weight: bold;
     text-transform: uppercase;
-    margin-top: 3rem; }
+    margin-top: 4rem;
+    margin-bottom: 0; }
   .home article p {
+    font-size: 5vmin;
     text-align: left;
     padding-left: 2rem;
     padding-right: 2rem;
@@ -1205,15 +1239,18 @@ object {
   display: none; }
 
 @media screen and (min-width: 1024px) {
+  .home h2 {
+    text-transform: uppercase; }
   .home .desktop-bg {
     background: url(../../images/nature-background.png);
     background-size: cover; }
   .home .hero-container {
+    background-position: center;
     height: 85vh; }
     .home .hero-container img {
       height: 25%;
       top: 4%;
-      right: 4%;
+      right: 1%;
       left: auto; }
   .home article {
     background: none;
@@ -1222,10 +1259,10 @@ object {
     text-align: left;
     color: white; }
     .home article h2 {
-      text-transform: uppercase;
       margin-top: 3rem;
       border: 1px solid black;
-      background-color: black; }
+      background-color: black;
+      padding-left: 2rem; }
     .home article p {
       text-align: left;
       padding-left: 2rem;
@@ -1238,16 +1275,18 @@ object {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap; }
     .home .front-page-news h2 {
-      width: 100%;
-      text-align: center; }
+      text-align: left;
+      border: 1px solid black;
+      background-color: black;
+      padding-left: 2rem;
+      font-size: 30px; }
     .home .front-page-news .front-page-news-gallery {
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: justify;
-          -ms-flex-pack: justify;
-              justify-content: space-between;
-      width: 100%; }
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+      width: 90%; }
   .home .front-page-button {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1257,7 +1296,8 @@ object {
             justify-content: center;
     position: relative; }
     .home .front-page-button .see-more {
-      font-family: 'lato';
+      font-family: "Lato", sans-serif;
+      font-weight: bold;
       position: absolute;
       top: 1.2rem;
       text-align: center;
