--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -833,8 +833,13 @@ header {
 .menu-menu-1-container {
   visibility: hidden; }
 
+.desktop-header-logo {
+  display: none; }
+
 @media screen and (min-width: 1024px) {
-  .site-header {
+  .toggle-open {
+    display: none; }
+  .header-logo {
     display: none; }
   .desktop-site-header {
     display: block;
@@ -843,6 +848,7 @@ header {
     height: 5.75rem;
     position: relative; }
   .desktop-header-logo {
+    display: block;
     position: absolute;
     height: 5rem;
     padding-top: 1rem; }
@@ -980,6 +986,45 @@ header {
   top: 30%; }
   .page-template-contact .eagle-logo img {
     height: 80px; }
+
+.alert-container {
+  display: none;
+  position: fixed;
+  left: 5%;
+  right: 5%;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 1;
+  background: #1DAFB8;
+  width: 90%; }
+
+.info-alert {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%; }
+  .info-alert .info-alert-text {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    color: #FFFFFF;
+    text-align: center; }
+  .info-alert .gallery-button {
+    position: relative; }
+    .info-alert .gallery-button p {
+      position: absolute;
+      font-weight: bold;
+      top: 20%;
+      left: 30%;
+      text-transform: uppercase;
+      color: #FFFFFF; }
 
 /*	disables response output	 */
 div.wpcf7-response-output, div.wpcf7-validation-errors {
