--- a/themes/csl/sass/_mixins.scss
+++ b/themes/csl/sass/_mixins.scss
@@ -1,3 +1,10 @@
+// Screen Sizes
+@mixin desktop {
+	@media (min-width: $desktop-width) {
+		@content;
+	}
+}
+
 // Rem output with px fallback
 @mixin font-size($sizeValue: 1) {
 	font-size: ($sizeValue * 16) * 1px;
