--- a/themes/csl/sass/_elements.scss
+++ b/themes/csl/sass/_elements.scss
@@ -34,7 +34,7 @@ hr {
 }
 
 ul, ol {
-	margin: 0 0 $base__space-unit ($base__space-unit * 2);
+	margin: 0;
 }
 
 ul {
@@ -48,7 +48,6 @@ ol {
 li > ul,
 li > ol {
 	margin-bottom: 0;
-	margin-left: $base__space-unit;
 }
 
 dt {
