--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -995,7 +995,7 @@ header {
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
   z-index: 1;
-  background: #1DAFB8;
+  background-color: rgba(29, 175, 184, 0.75);
   width: 90%; }
 
 .info-alert {
@@ -1011,10 +1011,11 @@ header {
   margin-right: auto;
   width: 90%; }
   .info-alert .info-alert-text {
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
+    -ms-flex-preferred-size: 80%;
+        flex-basis: 80%;
     color: #FFFFFF;
-    text-align: center; }
+    text-align: center;
+    font-weight: bold; }
   .info-alert .gallery-button {
     position: relative; }
     .info-alert .gallery-button p {
@@ -1211,6 +1212,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         flex-basis: 49%;
     height: 50vw; }
   .term-weekly .entry-content {
+    top: 20%;
     font-size: 1.5rem; } }
 
 /*--------------------------------------------------------------
@@ -1280,16 +1282,6 @@ object {
 .hero-container {
   background: url(../../images/csl-hero.png);
   background-size: cover;
-<<<<<<< HEAD
-  height: 40vh;
-  position: relative; }
-  .hero-container img {
-    position: absolute;
-    height: 55px;
-    bottom: 3vh;
-    left: 5vw; }
-
-=======
   background-position: left;
   height: 80vw;
   position: relative; }
@@ -1314,7 +1306,6 @@ object {
   top: 20%;
   width: 25%; }
 
->>>>>>> 31b1ff0e2bf170ba51572cf30bf0825a52e9591d
 .home article {
   background: url(../../images/nature-background.png);
   background-size: cover;
