added the white-button.png to the submit button on the contact form

--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -355,11 +355,6 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  border: 1px solid;
-  border-color: #ccc #ccc #bbb;
-  border-radius: 3px;
-  background: #e6e6e6;
-  color: rgba(0, 0, 0, 0.8);
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 1;
@@ -1025,6 +1020,18 @@ header {
       left: 30%;
       text-transform: uppercase;
       color: #FFFFFF; }
+
+.wpcf7-submit {
+  color: #1DAFB8;
+  text-transform: uppercase;
+  font-size: 1.25rem !important;
+  font-weight: bold;
+  width: 8rem;
+  height: 4rem;
+  margin-top: 0.5rem;
+  background: url("../../images/white-button.png") 10px 10px;
+  background-size: cover;
+  background-position: center; }
 
 /*	disables response output	 */
 div.wpcf7-response-output, div.wpcf7-validation-errors {
