--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -484,6 +484,18 @@ header{
 		}
 	}
 }
+.wpcf7-submit{
+	color:$teal;
+	text-transform:uppercase;
+	font-size:1.25rem !important;
+	font-weight:bold;
+	width: 8rem;
+	height: 4rem;
+	margin-top: 0.5rem;
+	background:url('../../images/white-button.png')10px 10px;
+	background-size:cover;
+	background-position: center;
+}
 
 /*	disables response output	 */
 div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !important; }
