--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -490,11 +490,12 @@ header{
 	font-size:1.25rem !important;
 	font-weight:bold;
 	width: 8rem;
-	height: 4rem;
-	margin-top: 0.5rem;
+	height: 4.25rem;
 	background:url('../../images/white-button.png')10px 10px;
 	background-size:cover;
 	background-position: center;
+	position: absolute;
+	right:2%;
 }
 
 /*	disables response output	 */
@@ -559,6 +560,9 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 		}
 		.address-province{
 			margin-top:2rem;
+		}
+		.wpcf7-submit{
+		bottom:50%;
 		}
 	}
 }
