--- a/themes/csl/sass/_forms.scss
+++ b/themes/csl/sass/_forms.scss
@@ -8,7 +8,7 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	// border: 1px solid;
+	border:none;
 	// border-color: #ccc #ccc #bbb;
 	// border-radius: 3px;
 	// background: #e6e6e6;
