--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -570,8 +570,10 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 //weekly events//
 .term-weekly{
 	.weekly-event-page-title{
-		padding-left:0.5rem;
+		padding-left:2%;
 		text-transform: uppercase;
+		font-weight:bold;
+		font-size:1.5rem;
 		color:$black;
 	}
 	.site-main{
