took into account if days were added to weekly event contents, had to re adjust content to display it all in the container without overflowing

--- a/themes/csl/sass/_content.scss
+++ b/themes/csl/sass/_content.scss
@@ -629,7 +629,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
 	}
 	.entry-content{
 		position: absolute;
-		top:0%;
+		top:-5%;
 		left:5%;
 		color:white;
 		display: none;
@@ -644,6 +644,9 @@ div.wpcf7-response-output, div.wpcf7-validation-errors { display: none !importan
     top: 0;
 	}
 	.location{
+		display:flex;
+	}
+	.days{
 		display:flex;
 	}
 
