--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1172,7 +1172,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
 
 .term-weekly .entry-content {
   position: absolute;
-  top: 0%;
+  top: -5%;
   left: 5%;
   color: white;
   display: none;
@@ -1187,6 +1187,11 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   top: 0; }
 
 .term-weekly .location {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
+.term-weekly .days {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex; }
