--- a/themes/csl/sass/_normalize.scss
+++ b/themes/csl/sass/_normalize.scss
@@ -23,6 +23,19 @@ summary {
 	display: block;
 }
 
+h1 {
+	font-size: 2em;
+	font-weight: bold;
+}
+h2 {
+	font-size:2em;
+	font-weight: bold; 
+}
+
+p {
+	font-size: 1em;
+}
+
 audio,
 canvas,
 progress,
@@ -213,3 +226,4 @@ td,
 th {
 	padding: 0;
 }
+
